snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3-sources.jar.sha256
7390c916ac4d6813eae478a6e1a14a2ef653122a4e2da6d64a930ae5bb04e8fc